--- a/notebooks/experiment_locally.ipynb
+++ b/notebooks/experiment_locally.ipynb
@@ -29,7 +29,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-13 10:14:46,531 name=ffmodel.core.orchestrator level=INFO Starting local experiment with solution-id - 01 and run-id heroic_ant_cs9xlw07xf \n"
+      "2023-10-13 13:34:39,459 name=ffmodel.core.orchestrator level=INFO Starting local experiment with solution-id - 02 and run-id amiable_flower_9f90g2s5rz \n",
+      "2023-10-13 13:34:39,478 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
+      "2023-10-13 13:34:39,479 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
+      "2023-10-13 13:34:39,479 name=ffmodel.core.orchestrator level=METRICS solution_config \n",
+      "2023-10-13 13:34:39,482 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.static_context_from_file to the pipeline. \n",
+      "2023-10-13 13:34:39,493 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.few_shots_from_file to the pipeline. \n",
+      "2023-10-13 13:34:39,495 name=ffmodel.core.orchestrator level=INFO Adding component components.stitchers.openai_chat_completions to the pipeline. \n"
      ]
     },
     {
@@ -43,23 +49,56 @@
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "File path not found: ./data/batch_execution/01_experiment_set.jsonl",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jorgeluna/work/ffmodel-projects/pizza/notebooks/experiment_locally.ipynb Cell 3\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jorgeluna/work/ffmodel-projects/pizza/notebooks/experiment_locally.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m solution_config_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../solution/configs/01_baseline.yaml\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jorgeluna/work/ffmodel-projects/pizza/notebooks/experiment_locally.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#solution_config_path = \"./configs/02_with_fewshots_01 _min.yaml\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jorgeluna/work/ffmodel-projects/pizza/notebooks/experiment_locally.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m#solution_config_path = \"./configs/03_with_fewshots_01.yaml\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jorgeluna/work/ffmodel-projects/pizza/notebooks/experiment_locally.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#solution_config_path = \"./configs/05_with_fewshots_02_min.yaml\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jorgeluna/work/ffmodel-projects/pizza/notebooks/experiment_locally.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m#solution_config_path = \"./configs/04_with_fewshots_02.yaml\"\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jorgeluna/work/ffmodel-projects/pizza/notebooks/experiment_locally.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m data_models \u001b[39m=\u001b[39m orchestrator\u001b[39m.\u001b[39;49mexecute_experiment_on_local(solution_config_path, environment_config_path)\n",
-      "File \u001b[0;32m~/work/ffmodel-projects/ffmodel-3.10/lib/python3.10/site-packages/ffmodel/core/orchestrator.py:234\u001b[0m, in \u001b[0;36mexecute_experiment_on_local\u001b[0;34m(solution_config_path, environment_config_path)\u001b[0m\n\u001b[1;32m    232\u001b[0m reader_config \u001b[39m=\u001b[39m solution_config\u001b[39m.\u001b[39mexperimentation\u001b[39m.\u001b[39mreader\n\u001b[1;32m    233\u001b[0m reader_module \u001b[39m=\u001b[39m importlib\u001b[39m.\u001b[39mimport_module(reader_config\u001b[39m.\u001b[39mname)\n\u001b[0;32m--> 234\u001b[0m reader \u001b[39m=\u001b[39m reader_module\u001b[39m.\u001b[39;49mReader(\n\u001b[1;32m    235\u001b[0m     name\u001b[39m=\u001b[39;49mreader_config\u001b[39m.\u001b[39;49mname,\n\u001b[1;32m    236\u001b[0m     args\u001b[39m=\u001b[39;49mreader_config\u001b[39m.\u001b[39;49margs,\n\u001b[1;32m    237\u001b[0m     data_model_type\u001b[39m=\u001b[39;49mreader_config\u001b[39m.\u001b[39;49mdata_model_type,\n\u001b[1;32m    238\u001b[0m     data_config\u001b[39m=\u001b[39;49msolution_config\u001b[39m.\u001b[39;49mexperimentation\u001b[39m.\u001b[39;49mdata,\n\u001b[1;32m    239\u001b[0m )\n\u001b[1;32m    241\u001b[0m \u001b[39m# Writers\u001b[39;00m\n\u001b[1;32m    242\u001b[0m writers \u001b[39m=\u001b[39m []\n",
-      "File \u001b[0;32m~/work/ffmodel-projects/ffmodel-3.10/lib/python3.10/site-packages/ffmodel/components/base.py:79\u001b[0m, in \u001b[0;36mBaseReaderComponent.__init__\u001b[0;34m(self, name, args, data_model_type, data_config)\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_download_aml_data_asset()\n\u001b[1;32m     78\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_config\u001b[39m.\u001b[39mfile_path \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_config\u001b[39m.\u001b[39mfile_path):\n\u001b[0;32m---> 79\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFile path not found: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_config\u001b[39m.\u001b[39mfile_path\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     81\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_post_init()\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: File path not found: ./data/batch_execution/01_experiment_set.jsonl"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-13 13:34:39,867 name=ffmodel.core.orchestrator level=INFO Adding component components.model_callers.openai_chat_completions to the pipeline. \n",
+      "2023-10-13 13:34:39,873 name=ffmodel.core.orchestrator level=INFO Adding component components.post_processors.minify_json to the pipeline. \n",
+      "2023-10-13 13:34:39,879 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.json_schema to the pipeline. \n",
+      "2023-10-13 13:34:39,906 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.fuzzy to the pipeline. \n",
+      "[nltk_data] Downloading package punkt to /Users/jorgeluna/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "2023-10-13 13:34:41,185 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.bleu to the pipeline. \n",
+      "2023-10-13 13:34:41,203 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.rouge to the pipeline. \n",
+      "2023-10-13 13:34:41,203 name=ffmodel.core.orchestrator level=INFO Beginning execution... \n",
+      "2023-10-13 13:34:41,204 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.static_context_from_file' \n",
+      "2023-10-13 13:34:41,204 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.few_shots_from_file' \n",
+      "2023-10-13 13:34:41,204 name=ffmodel.core.orchestrator level=INFO Executing 'components.stitchers.openai_chat_completions' \n",
+      "2023-10-13 13:34:41,205 name=ffmodel.core.orchestrator level=INFO Executing 'components.model_callers.openai_chat_completions' \n",
+      "2023-10-13 13:34:51,482 name=ffmodel.core.orchestrator level=INFO Executing 'components.post_processors.minify_json' \n",
+      "2023-10-13 13:34:51,482 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.json_schema' \n",
+      "2023-10-13 13:34:51,494 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.fuzzy' \n",
+      "2023-10-13 13:34:51,495 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.bleu' \n",
+      "2023-10-13 13:35:04,757 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.rouge' \n",
+      "2023-10-13 13:35:04,758 name=ffmodel.core.orchestrator level=INFO Finished execution\n",
+      "Returning data models \n",
+      "2023-10-13 13:35:04,943 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:35:04,953 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:35:04,991 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:35:04,991 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:35:04,996 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:35:05,014 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:35:05,015 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:35:05,027 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:35:05,073 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:35:05,074 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:35:05,079 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:35:05,098 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:35:05,099 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:35:05,111 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:35:05,156 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:35:05,157 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:35:05,163 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:35:05,187 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:35:05,187 name=ffmodel.core.orchestrator level=INFO Finished local experiment \n"
      ]
     }
    ],
    "source": [
-    "solution_config_path = \"../solution/configs/01_baseline.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/02_with_fewshots_01 _min.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
+    "#solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
+    "#solution_config_path = \"../solution/configs/01_with_static_context_01.yaml\"\n",
+    "#solution_config_path = \"../solution/configs/02_with_fewshots_01_min.yaml\"\n",
+    "solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
     "#solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
     "#solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
     "\n",
