udating notebooks to use different .env files for chatbot vs local deployment/experiment stuff

--- a/notebooks/deploy_solution_locally.ipynb
+++ b/notebooks/deploy_solution_locally.ipynb
@@ -16,11 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "from ffmodel.core.inference_endpoint import InferenceEndpoint\n",
     "\n",
-    "environment_config_path = \"~/.product-search.env\""
+    "environment_config_path = \"~/.ffmodel.env\""
    ]
   },
   {
