--- a/notebooks/experiment_locally.ipynb
+++ b/notebooks/experiment_locally.ipynb
@@ -17,25 +17,36 @@
    "source": [
     "from ffmodel.core import orchestrator\n",
     "\n",
-    "environment_config_path = \"~/.product-search.env\""
+    "environment_config_path = \"~/.ffmodel.env\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-13 13:34:39,459 name=ffmodel.core.orchestrator level=INFO Starting local experiment with solution-id - 02 and run-id amiable_flower_9f90g2s5rz \n",
-      "2023-10-13 13:34:39,478 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
-      "2023-10-13 13:34:39,479 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
-      "2023-10-13 13:34:39,479 name=ffmodel.core.orchestrator level=METRICS solution_config \n",
-      "2023-10-13 13:34:39,482 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.static_context_from_file to the pipeline. \n",
-      "2023-10-13 13:34:39,493 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.few_shots_from_file to the pipeline. \n",
-      "2023-10-13 13:34:39,495 name=ffmodel.core.orchestrator level=INFO Adding component components.stitchers.openai_chat_completions to the pipeline. \n"
+      "2023-10-13 13:36:28,715 name=ffmodel.core.orchestrator level=INFO Starting local experiment with solution-id - 04 and run-id honest_cart_z9kgxl7y6z \n",
+      "2023-10-13 13:36:28,715 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
+      "2023-10-13 13:36:28,716 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
+      "2023-10-13 13:36:28,716 name=ffmodel.core.orchestrator level=METRICS solution_config \n",
+      "2023-10-13 13:36:28,717 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.static_context_from_file to the pipeline. \n",
+      "2023-10-13 13:36:28,734 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.few_shots_from_file to the pipeline. \n",
+      "2023-10-13 13:36:28,734 name=ffmodel.core.orchestrator level=INFO Adding component components.stitchers.openai_chat_completions to the pipeline. \n",
+      "2023-10-13 13:36:28,735 name=ffmodel.core.orchestrator level=INFO Adding component components.model_callers.openai_chat_completions to the pipeline. \n",
+      "2023-10-13 13:36:28,736 name=ffmodel.core.orchestrator level=INFO Adding component components.post_processors.minify_json to the pipeline. \n",
+      "2023-10-13 13:36:28,736 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.json_schema to the pipeline. \n",
+      "2023-10-13 13:36:28,737 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.fuzzy to the pipeline. \n",
+      "2023-10-13 13:36:28,737 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.bleu to the pipeline. \n",
+      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.rouge to the pipeline. \n",
+      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Beginning execution... \n",
+      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.static_context_from_file' \n",
+      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.few_shots_from_file' \n",
+      "2023-10-13 13:36:28,739 name=ffmodel.core.orchestrator level=INFO Executing 'components.stitchers.openai_chat_completions' \n",
+      "2023-10-13 13:36:28,739 name=ffmodel.core.orchestrator level=INFO Executing 'components.model_callers.openai_chat_completions' \n"
      ]
     },
     {
@@ -44,53 +55,39 @@
      "text": [
       "Loading local environment configs from file.\n",
       "Loaded 2 configs from file '/Users/jorgeluna/.product-search.env'.\n",
-      "Key vault url not set. Skipping key vault client initialization.\n",
-      "FFModelLogger: Logging will print to console as no AppInsight connection was provided (config `ApplicationInsightConnectionString)`.\n"
+      "Key vault url not set. Skipping key vault client initialization.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-13 13:34:39,867 name=ffmodel.core.orchestrator level=INFO Adding component components.model_callers.openai_chat_completions to the pipeline. \n",
-      "2023-10-13 13:34:39,873 name=ffmodel.core.orchestrator level=INFO Adding component components.post_processors.minify_json to the pipeline. \n",
-      "2023-10-13 13:34:39,879 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.json_schema to the pipeline. \n",
-      "2023-10-13 13:34:39,906 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.fuzzy to the pipeline. \n",
-      "[nltk_data] Downloading package punkt to /Users/jorgeluna/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "2023-10-13 13:34:41,185 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.bleu to the pipeline. \n",
-      "2023-10-13 13:34:41,203 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.rouge to the pipeline. \n",
-      "2023-10-13 13:34:41,203 name=ffmodel.core.orchestrator level=INFO Beginning execution... \n",
-      "2023-10-13 13:34:41,204 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.static_context_from_file' \n",
-      "2023-10-13 13:34:41,204 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.few_shots_from_file' \n",
-      "2023-10-13 13:34:41,204 name=ffmodel.core.orchestrator level=INFO Executing 'components.stitchers.openai_chat_completions' \n",
-      "2023-10-13 13:34:41,205 name=ffmodel.core.orchestrator level=INFO Executing 'components.model_callers.openai_chat_completions' \n",
-      "2023-10-13 13:34:51,482 name=ffmodel.core.orchestrator level=INFO Executing 'components.post_processors.minify_json' \n",
-      "2023-10-13 13:34:51,482 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.json_schema' \n",
-      "2023-10-13 13:34:51,494 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.fuzzy' \n",
-      "2023-10-13 13:34:51,495 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.bleu' \n",
-      "2023-10-13 13:35:04,757 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.rouge' \n",
-      "2023-10-13 13:35:04,758 name=ffmodel.core.orchestrator level=INFO Finished execution\n",
+      "2023-10-13 13:36:37,260 name=ffmodel.core.orchestrator level=INFO Executing 'components.post_processors.minify_json' \n",
+      "2023-10-13 13:36:37,262 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.json_schema' \n",
+      "2023-10-13 13:36:37,278 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.fuzzy' \n",
+      "2023-10-13 13:36:37,280 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.bleu' \n",
+      "2023-10-13 13:36:50,647 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.rouge' \n",
+      "2023-10-13 13:36:50,648 name=ffmodel.core.orchestrator level=INFO Finished execution\n",
       "Returning data models \n",
-      "2023-10-13 13:35:04,943 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:35:04,953 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:35:04,991 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:35:04,991 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:35:04,996 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:35:05,014 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:35:05,015 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:35:05,027 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:35:05,073 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:35:05,074 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:35:05,079 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:35:05,098 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:35:05,099 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:35:05,111 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:35:05,156 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:35:05,157 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:35:05,163 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:35:05,187 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:35:05,187 name=ffmodel.core.orchestrator level=INFO Finished local experiment \n"
+      "2023-10-13 13:36:50,830 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:36:50,840 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:36:50,876 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:36:50,877 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:36:50,881 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:36:50,900 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:36:50,900 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:36:50,912 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:36:50,957 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:36:50,958 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:36:50,963 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:36:50,981 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:36:50,982 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:36:50,994 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:36:51,038 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:36:51,038 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
+      "2023-10-13 13:36:51,045 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
+      "2023-10-13 13:36:51,068 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
+      "2023-10-13 13:36:51,068 name=ffmodel.core.orchestrator level=INFO Finished local experiment \n"
      ]
     }
    ],
@@ -98,9 +95,9 @@
     "#solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
     "#solution_config_path = \"../solution/configs/01_with_static_context_01.yaml\"\n",
     "#solution_config_path = \"../solution/configs/02_with_fewshots_01_min.yaml\"\n",
-    "solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
+    "#solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
     "#solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
+    "solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
     "\n",
     "data_models = orchestrator.execute_experiment_on_local(solution_config_path, environment_config_path)"
    ]
