--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -5,51 +5,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a simple chatbot using the ChatGPT model\n",
+    "# A pizza order bot\n",
     "\n",
-    "*__NOTE:__\n",
-    "For instructions on running the Jupyter Notebook that contains the labs see instructions here: <https://github.com/retaildevcrews/OpenAI-Labs>*\n",
-    "\n",
-    "This sample notebook demonstrates  creation of a simple chatbot that uses the ChatGPT model using the Chat Completion API.  The API takes in an array of messages that have the following parts:\n",
-    "- role (system - sets the overall behavior for the assistant , user - provides specific instructions for the assistant, assistant - stores previous responses and can be used for fine tuning to achieve desired behavior)\n",
-    "- content\n",
-    "\n",
-    "For this lab the system message will be a simple description, and the messages sent to the api will be a collection that inclues all of the previous messages and responses.  In addition this example will track the number of tokens in the message to ensure it does not exceed the maximum.\n",
-    "\n",
-    "The chatbot labs are based on examples found in the <https://github.com/Azure/openai-samples> repository.\n"
+    "This sample notebook demonstrates  creation of a simple chatbot that an FFModel inference endpoint which in turn calls OpenAPI chat completions api."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-15 09:26:00,830 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading local environment configs from file.\n",
-      "Loaded 3 configs from file '/Users/jorgeluna/.product-search.env'.\n",
-      "Key vault url not set. Skipping key vault client initialization.\n",
-      "FFModelLogger: Logging will print to console as no AppInsight connection was provided (config `ApplicationInsightConnectionString)`.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /Users/jorgeluna/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ffmodel.core.inference_endpoint import InferenceEndpoint\n",
     "\n",
@@ -73,9 +38,7 @@
     "## 1.0 Define Request to OpenAI API\n",
     "For these labs we are using the Azure OpenAI Chat Completion API, this is different than the Completions API.  Information about its usage can be found here:\n",
     "<https://learn.microsoft.com/en-us/azure/cognitive-services/openai/reference#chat-completions>\n",
-    "The chat completions API takes a collection of messages to provide history and context of chat to the model.  This function takes a collection of messages which are objects that define a role and content.\n",
-    "\n",
-    "We also create a function that calculates the number of tokens received from the message collection so that we can keep track of message size and not exceed threshhold.\n"
+    "The chat completions API takes a collection of messages to provide history and context of chat to the model.  This function takes a chat request object that ffmodel inference endpoint can use to create a prompt."
    ]
   },
   {
@@ -84,15 +47,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tiktoken\n",
-    "\n",
-    "\n",
     "# Defining a function to send the prompt to the ChatGPT model\n",
     "# More info : https://learn.microsoft.com/en-us/azure/cognitive-services/openai/how-to/chatgpt?pivots=programming-language-chat-completions\n",
     "def send_message(chat_request):\n",
     "    response = endpoint.execute(chat_request)\n",
-    "    return response.model_output.completions[0]\n",
-    "\n"
+    "    return response.model_output.completions[0]"
    ]
   },
   {
@@ -105,77 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to pizzaai.  What can I get for you?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-15 09:26:24,134 name=ffmodel.core.inference_endpoint level=METRICS final_data_model \n",
-      "2023-10-15 09:26:24,135 name=ffmodel.core.inference_endpoint level=METRICS request_complete \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot:  I'm sorry, but we do not offer candy at our pizza and wings restaurant. We specialize in pizza, wings, and drinks. Is there anything else I can help you with?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-15 09:26:52,478 name=ffmodel.core.inference_endpoint level=METRICS final_data_model \n",
-      "2023-10-15 09:26:52,479 name=ffmodel.core.inference_endpoint level=METRICS request_complete \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot:  I'm sorry, but we do not offer pie at our pizza and wings restaurant. We specialize in pizza, wings, and drinks. Is there anything else I can help you with?\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-15 09:27:46,684 name=ffmodel.core.inference_endpoint level=METRICS final_data_model \n",
-      "2023-10-15 09:27:46,685 name=ffmodel.core.inference_endpoint level=METRICS request_complete \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot:  I'm sorry, but I am unable to process that request as it is not a valid order for pizza, wings, or drinks. Please let me know if you would like to place an order.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-15 09:28:15,279 name=ffmodel.core.inference_endpoint level=METRICS final_data_model \n",
-      "2023-10-15 09:28:15,280 name=ffmodel.core.inference_endpoint level=METRICS request_complete \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bot:  {\"items\": [{\"type\": \"drink\", \"name\": \"Sprite\", \"quantity\": 2, \"size\": \"2 liter\"}, {\"type\": \"custom pizza\", \"size\": \"large\", \"crust\": \"regular\", \"quantity\": 2, \"toppings\": [\"pepperoni\"]}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import typing\n",
