--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -51,7 +51,8 @@
     "# More info : https://learn.microsoft.com/en-us/azure/cognitive-services/openai/how-to/chatgpt?pivots=programming-language-chat-completions\n",
     "def send_message(chat_request):\n",
     "    response = endpoint.execute(chat_request)\n",
-    "    return response.model_output.completions[0]"
+    "    return response.model_output.completions[0]\n",
+    "\n"
    ]
   },
   {
