adding a little context to the chatbot notebook

--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# A pizza order bot\n",
     "\n",
-    "This sample notebook demonstrates  creation of a simple chatbot that an FFModel inference endpoint which in turn calls OpenAPI chat completions api."
+    "This sample notebook demonstrates  creation of a simple chatbot that uses an FFModel inference endpoint which in turn calls OpenAPI chat completions api.   The goal is to demonstrate interactions with the endpoint in a scenario that requires history being sent with the prompt.  The endpoint is designed to return json so successful results will look \"funny\" in the chat.  "
    ]
   },
   {
