--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -12,19 +12,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-16 11:29:01,266 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading local environment configs from file.\n",
+      "Loaded 4 configs from file '/Users/jorgeluna/.chatbot.env'.\n",
+      "Key vault url not set. Skipping key vault client initialization.\n",
+      "FFModelLogger: Logging will print to console as no AppInsight connection was provided (config `ApplicationInsightConnectionString)`.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/jorgeluna/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "from ffmodel.core.inference_endpoint import InferenceEndpoint\n",
     "\n",
     "environment_config_path = \"~/.chatbot.env\"\n",
     "\n",
-    "#solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
+    "solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
     "#solution_config_path = \"../solution/configs/01_with_static_context_01.yaml\"\n",
     "#solution_config_path = \"../solution/configs/02_with_fewshots_01 _min.yaml\"\n",
     "#solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
-    "solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
+    "#solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
     "#solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
     "\n",
     "endpoint = InferenceEndpoint(solution_config_path, environment_config_path)"
@@ -65,9 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to pizzaai.  What can I get for you?\n",
+      "Bot:  I'm sorry, but we only serve pizza, wings, and drinks. Is there anything else I can help you with?\n",
+      "Bot:  {\"items\": [{\"type\": \"custom pizza\", \"size\": \"extra large\", \"crust\": \"regular\", \"quantity\": 2, \"toppings\": [\"pepperoni\"]}]}\n",
+      "Bot: Bye\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import typing\n",
@@ -111,7 +148,10 @@
     "        interaction = CompletionPair(user_nl=request,completion=response)\n",
     "        conversation.append(interaction)\n",
     "        message_count+=1\n",
-    "        print('Bot: ', response)"
+    "        print('Bot: ', response)\n",
+    "        request=None\n",
+    "        current_message=None\n",
+    "        response=None"
    ]
   },
   {
