--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-16 11:29:01,266 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
+      "2023-10-16 14:13:20,961 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
      ]
     },
     {
@@ -46,11 +46,11 @@
     "\n",
     "environment_config_path = \"~/.chatbot.env\"\n",
     "\n",
-    "solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
+    "#solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
     "#solution_config_path = \"../solution/configs/01_with_static_context_01.yaml\"\n",
     "#solution_config_path = \"../solution/configs/02_with_fewshots_01 _min.yaml\"\n",
     "#solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
+    "solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
     "#solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
     "\n",
     "endpoint = InferenceEndpoint(solution_config_path, environment_config_path)"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +99,14 @@
      "output_type": "stream",
      "text": [
       "Welcome to pizzaai.  What can I get for you?\n",
-      "Bot:  I'm sorry, but we only serve pizza, wings, and drinks. Is there anything else I can help you with?\n",
-      "Bot:  {\"items\": [{\"type\": \"custom pizza\", \"size\": \"extra large\", \"crust\": \"regular\", \"quantity\": 2, \"toppings\": [\"pepperoni\"]}]}\n",
-      "Bot: Bye\n"
+      "Bot:  I'm sorry, I don't understand what you mean by \"jorge\". Can I assist you with anything related to ordering pizza, wings, or drinks?\n",
+      "Bot:  I'm sorry, but as a pizza and wings restaurant bot, I am not able to provide candy. Is there anything else I can help you with?\n",
+      "Bot:  Hello! How can I assist you with your order today?\n",
+      "Bot:  I'm sorry, but I'm a bot that takes orders at a pizza and wings restaurant. I can only assist you with ordering pizza, wings, and drinks. Is there anything else I can help you with?\n",
+      "Bot:  Hello! How can I assist you with your order today?\n",
+      "Bot:  Sure thing! Would you like any additional toppings or any other items with your order?\n",
+      "Bot:  Hello! How can I assist you with your order today?\n",
+      "Bot:  Hello! How can I assist you with your order today?\n"
      ]
     }
    ],
