making non minified order schema

--- a/notebooks/chatbot.ipynb
+++ b/notebooks/chatbot.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-16 14:13:20,961 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
+      "2023-10-16 14:17:13,950 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
      ]
     },
     {
@@ -99,14 +99,9 @@
      "output_type": "stream",
      "text": [
       "Welcome to pizzaai.  What can I get for you?\n",
-      "Bot:  I'm sorry, I don't understand what you mean by \"jorge\". Can I assist you with anything related to ordering pizza, wings, or drinks?\n",
-      "Bot:  I'm sorry, but as a pizza and wings restaurant bot, I am not able to provide candy. Is there anything else I can help you with?\n",
-      "Bot:  Hello! How can I assist you with your order today?\n",
-      "Bot:  I'm sorry, but I'm a bot that takes orders at a pizza and wings restaurant. I can only assist you with ordering pizza, wings, and drinks. Is there anything else I can help you with?\n",
-      "Bot:  Hello! How can I assist you with your order today?\n",
-      "Bot:  Sure thing! Would you like any additional toppings or any other items with your order?\n",
-      "Bot:  Hello! How can I assist you with your order today?\n",
-      "Bot:  Hello! How can I assist you with your order today?\n"
+      "Bot:  {\"items\": [{\"type\": \"specialty pizza\", \"name\": \"Pepperoni\", \"size\": \"large\", \"crust\": \"regular\", \"quantity\": 1}, {\"type\": \"drink\", \"name\": \"Coca-Cola\", \"quantity\": 1, \"size\": \"medium\"}]}\n",
+      "Bot:  I'm sorry, but as a pizza and wings restaurant bot, I am not able to fulfill that request. Is there anything else I can help you with?\n",
+      "Bot: Bye\n"
      ]
     }
    ],
