--- a/notebooks/experiment_locally.ipynb
+++ b/notebooks/experiment_locally.ipynb
@@ -22,86 +22,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-13 13:36:28,715 name=ffmodel.core.orchestrator level=INFO Starting local experiment with solution-id - 04 and run-id honest_cart_z9kgxl7y6z \n",
-      "2023-10-13 13:36:28,715 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
-      "2023-10-13 13:36:28,716 name=ffmodel.utils.file_logger level=INFO File Logging is disabled: SolutionConfig and DataModel will not be logged \n",
-      "2023-10-13 13:36:28,716 name=ffmodel.core.orchestrator level=METRICS solution_config \n",
-      "2023-10-13 13:36:28,717 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.static_context_from_file to the pipeline. \n",
-      "2023-10-13 13:36:28,734 name=ffmodel.core.orchestrator level=INFO Adding component components.pre_processors.few_shots_from_file to the pipeline. \n",
-      "2023-10-13 13:36:28,734 name=ffmodel.core.orchestrator level=INFO Adding component components.stitchers.openai_chat_completions to the pipeline. \n",
-      "2023-10-13 13:36:28,735 name=ffmodel.core.orchestrator level=INFO Adding component components.model_callers.openai_chat_completions to the pipeline. \n",
-      "2023-10-13 13:36:28,736 name=ffmodel.core.orchestrator level=INFO Adding component components.post_processors.minify_json to the pipeline. \n",
-      "2023-10-13 13:36:28,736 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.json_schema to the pipeline. \n",
-      "2023-10-13 13:36:28,737 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.fuzzy to the pipeline. \n",
-      "2023-10-13 13:36:28,737 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.bleu to the pipeline. \n",
-      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Adding component components.evaluators.rouge to the pipeline. \n",
-      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Beginning execution... \n",
-      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.static_context_from_file' \n",
-      "2023-10-13 13:36:28,738 name=ffmodel.core.orchestrator level=INFO Executing 'components.pre_processors.few_shots_from_file' \n",
-      "2023-10-13 13:36:28,739 name=ffmodel.core.orchestrator level=INFO Executing 'components.stitchers.openai_chat_completions' \n",
-      "2023-10-13 13:36:28,739 name=ffmodel.core.orchestrator level=INFO Executing 'components.model_callers.openai_chat_completions' \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading local environment configs from file.\n",
-      "Loaded 2 configs from file '/Users/jorgeluna/.product-search.env'.\n",
-      "Key vault url not set. Skipping key vault client initialization.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-13 13:36:37,260 name=ffmodel.core.orchestrator level=INFO Executing 'components.post_processors.minify_json' \n",
-      "2023-10-13 13:36:37,262 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.json_schema' \n",
-      "2023-10-13 13:36:37,278 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.fuzzy' \n",
-      "2023-10-13 13:36:37,280 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.bleu' \n",
-      "2023-10-13 13:36:50,647 name=ffmodel.core.orchestrator level=INFO Executing 'components.evaluators.rouge' \n",
-      "2023-10-13 13:36:50,648 name=ffmodel.core.orchestrator level=INFO Finished execution\n",
-      "Returning data models \n",
-      "2023-10-13 13:36:50,830 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:36:50,840 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:36:50,876 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:36:50,877 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:36:50,881 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:36:50,900 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:36:50,900 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:36:50,912 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:36:50,957 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:36:50,958 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:36:50,963 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:36:50,981 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:36:50,982 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:36:50,994 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:36:51,038 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:36:51,038 name=ffmodel.core.orchestrator level=METRICS request_complete \n",
-      "2023-10-13 13:36:51,045 name=ffmodel.core.orchestrator level=METRICS evaluation_metrics \n",
-      "2023-10-13 13:36:51,068 name=ffmodel.core.orchestrator level=METRICS final_data_model \n",
-      "2023-10-13 13:36:51,068 name=ffmodel.core.orchestrator level=INFO Finished local experiment \n"
+      "../solution/configs/03_with_fewshots_01.yaml\n",
+      "../solution/configs/00_baseline.yaml\n",
+      "../solution/configs/04_with_fewshots_02.yaml\n",
+      "../solution/configs/02_with_fewshots_01_min.yaml\n",
+      "../solution/configs/07_with_fewshots_02_and_static_context_01_min.yaml\n",
+      "../solution/configs/06_with_static_context_02.yaml\n",
+      "../solution/configs/05_with_fewshots_02_min.yaml\n",
+      "../solution/configs/01_with_static_context_01.yaml\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
     "\n",
-    "#solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/01_with_static_context_01.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/02_with_fewshots_01_min.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
-    "solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
+    "import os\n",
     "\n",
+    "def list_full_paths(directory):\n",
+    "    return [os.path.join(directory, file) for file in os.listdir(directory)]\n",
     "\n",
-    "data_models = orchestrator.execute_experiment_on_local(solution_config_path, environment_config_path)"
+    "for solution_config_path in list_full_paths(r'../solution/configs'):\n",
+    "    orchestrator.execute_experiment_on_local(solution_config_path, environment_config_path)"
    ]
   },
   {
