--- a/notebooks/1_chatbot_baseline.ipynb
+++ b/notebooks/1_chatbot_baseline.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A pizza order bot\n",
+    "# A pizza order bot Using Config 00\n",
     "\n",
     "This sample notebook demonstrates  creation of a simple chatbot that uses an FFModel inference endpoint which in turn calls OpenAPI chat completions api.   The goal is to demonstrate interactions with the endpoint in a scenario that requires history being sent with the prompt.  The endpoint is designed to return json so successful results will look \"funny\" in the chat.  "
    ]
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-16 14:17:13,950 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
+      "2023-10-17 12:20:50,249 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
      ]
     },
     {
@@ -46,11 +46,11 @@
     "\n",
     "environment_config_path = \"~/.chatbot.env\"\n",
     "\n",
-    "#solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
+    "solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
     "#solution_config_path = \"../solution/configs/01_with_static_context_01.yaml\"\n",
     "#solution_config_path = \"../solution/configs/02_with_fewshots_01 _min.yaml\"\n",
     "#solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
-    "solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
+    "#solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
     "#solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
     "\n",
     "endpoint = InferenceEndpoint(solution_config_path, environment_config_path)"
@@ -91,17 +91,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Your Name:  Jorge\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to pizzaai.  What can I get for you?\n",
-      "Bot:  {\"items\": [{\"type\": \"specialty pizza\", \"name\": \"Pepperoni\", \"size\": \"large\", \"crust\": \"regular\", \"quantity\": 1}, {\"type\": \"drink\", \"name\": \"Coca-Cola\", \"quantity\": 1, \"size\": \"medium\"}]}\n",
-      "Bot:  I'm sorry, but as a pizza and wings restaurant bot, I am not able to fulfill that request. Is there anything else I can help you with?\n",
-      "Bot: Bye\n"
+      "Welcome to pizzaai.  What can I get for you?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I want some candy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  As an AI language model, I cannot provide you with candy. However, you can visit a nearby store or candy shop to purchase some candy. Remember to consume it in moderation and maintain a healthy diet.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I want some pizza\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  I'm sorry, as an AI language model, I cannot provide you with pizza. However, you can order pizza from your local pizzeria or make your own pizza at home.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I want a large pepperoni pizza with mushrooms and a medium diet coke\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  As an AI language model, I cannot order food for you. However, you can place your order by calling your local pizza restaurant or using their online ordering system. Just make sure to specify your toppings and drink preference. Enjoy your meal!\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I want candy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  As an AI language model, I cannot provide you with candy. However, you can go to a nearby store and buy some candy or order it online. Remember to consume it in moderation and maintain a healthy diet.\n"
      ]
     }
    ],
@@ -187,5 +247,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
