--- a/notebooks/2_chatbot_static_context_nojson.ipynb
+++ b/notebooks/2_chatbot_static_context_nojson.ipynb
@@ -5,9 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A pizza order bot\n",
+    "# A pizza order bot using config 06\n",
     "\n",
-    "This sample notebook demonstrates  creation of a simple chatbot that uses an FFModel inference endpoint which in turn calls OpenAPI chat completions api.   The goal is to demonstrate interactions with the endpoint in a scenario that requires history being sent with the prompt.  The endpoint is designed to return json so successful results will look \"funny\" in the chat.  "
+    "This sample notebook demonstrates  creation of a simple chatbot that uses an FFModel inference endpoint which in turn calls OpenAPI chat completions api.   The goal is to demonstrate interactions with the endpoint in a scenario that requires history being sent with the prompt.  The endpoint is designed to return json so successful results will look \"funny\" in the chat.  \n",
+    "\n",
+    "This configuration sends a prompt that has text from a file added to the sytem message.  The text is as follows:\n",
+    "- *You are bot that takes orders at a pizza and wings restaurant\n",
+    "-   *If asked to order anything that is not related to pizza, wings, or drinks, you politely decline."
    ]
   },
   {
@@ -19,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-16 14:17:13,950 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
+      "2023-10-17 11:19:45,254 name=ffmodel.core.inference_endpoint level=METRICS solution_config \n"
      ]
     },
     {
@@ -46,12 +50,7 @@
     "\n",
     "environment_config_path = \"~/.chatbot.env\"\n",
     "\n",
-    "#solution_config_path = \"../solution/configs/00_baseline.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/01_with_static_context_01.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/02_with_fewshots_01 _min.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/03_with_fewshots_01.yaml\"\n",
-    "solution_config_path = \"../solution/configs/05_with_fewshots_02_min.yaml\"\n",
-    "#solution_config_path = \"../solution/configs/04_with_fewshots_02.yaml\"\n",
+    "solution_config_path = \"../solution/configs/06_with_static_context_02.yaml\"\n",
     "\n",
     "endpoint = InferenceEndpoint(solution_config_path, environment_config_path)"
    ]
@@ -91,16 +90,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Your Name:  Jorge\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to pizzaai.  What can I get for you?\n",
-      "Bot:  {\"items\": [{\"type\": \"specialty pizza\", \"name\": \"Pepperoni\", \"size\": \"large\", \"crust\": \"regular\", \"quantity\": 1}, {\"type\": \"drink\", \"name\": \"Coca-Cola\", \"quantity\": 1, \"size\": \"medium\"}]}\n",
-      "Bot:  I'm sorry, but as a pizza and wings restaurant bot, I am not able to fulfill that request. Is there anything else I can help you with?\n",
+      "Welcome to pizzaai.  What can I get for you?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I want some candy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  I'm sorry, but we only serve pizza, wings, and drinks at our restaurant. Is there anything else I can help you with?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I want some pizza\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  Great! What kind of pizza would you like? We have cheese, pepperoni, veggie, Hawaiian, meat lovers, and BBQ chicken.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I want a large pepperoni pizza with mushrooms and a large diet coke\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  Great choice! Would you like anything else with your order?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I would like some candy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  I'm sorry, but we only serve pizza, wings, and drinks at our restaurant. Is there anything else I can help you with?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jorge: I would like a pepperoni pizza with a large dr. pepper\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bot:  Great choice! Would you like anything else with your order?\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jorge: bye\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Bot: Bye\n"
      ]
     }
@@ -187,5 +274,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
